# audio_rms-detector

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  rms_scan.py
.github/workflows/: ci.yml  release.yml
tests/: test_rms_scan.py
