[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-scan"
version = "0.1.0"
description = "Offline RMS scanner for wav, mp3 and other formats using FFmpeg astats"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Richard A. Famoroti" }
]
dependencies = []
keywords = ["audio", "ffmpeg", "rms", "dBFS", "cli"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Environment :: Console",
  "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[project.urls]
Repository = "https://github.com/richadaf/RFX-core"
Issues = "https://github.com/richadaf/RFX-core/issues"

[project.optional-dependencies]
dev = [
  "build>=1.0.0",
  "twine>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
rms-scan = "rms_scan:main"

[tool.setuptools]
py-modules = ["rms_scan"]
